# jupiter-dex

./: CLI.md  README.md  dex-trades.spkg  jupiter-dex-v0.1.0.spkg  package-lock.json  package.json  schema.graphql  subgraph.yaml  substreams.yaml  tsconfig.json
package/tl-solana-dex-trades-1-0-13/v1.0.13/: solana-dex-trades.spkg
src/: mappings.ts
subgraph/: solana-dex-trades.spkg
substreams-jupiter-dex/: Cargo.toml  buf.gen.yaml  buf.yaml  build.rs  jupiter-dex-v0.1.0.spkg  jupiter-dex-v0.2.0.spkg  solana-dex-trades.spkg  substreams.yaml
substreams-jupiter-dex/proto/: jupiter.proto
substreams-jupiter-dex/proto/graph/: entities.proto
substreams-jupiter-dex/proto/sf/solana/accounts/v1/: accounts.proto
substreams-jupiter-dex/proto/sf/solana/type/v1/: block.proto  type.proto
substreams-jupiter-dex/proto/sf/substreams/v1/: entities.proto  jupiter.proto
substreams-jupiter-dex/src/: lib.rs
substreams-jupiter-dex/src/pb/: graph.entities.rs  graph.entities.v1.rs  jupiter.v1.rs  mod.rs  sf.solana.accounts.v1.rs  sf.solana.dex.trades.v1.rs  sf.solana.r#type.v1.rs  sf.solana.type.v1.rs  sf.substreams.rpc.v2.rs  sf.substreams.rs  sf.substreams.sink.service.v1.rs  sf.substreams.v1.rs  substreams.rs
