[package]
name = "substreams-jupiter-dex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.5.0"
prost = { version = "0.11", features = ["prost-derive"] }
prost-types = "0.11"
pbjson-types = "0.5"
substreams = "0.5"
substreams-solana = "0.1"
substreams-solana-program-instructions = "0.1"

[build-dependencies]
prost-build = "0.11"
tonic-build = "0.8"
