[package]
name = "substreams-jupiter-dex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.5.0"
hex = "0.4.3"
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-solana = "0.14.1"  # Updated from 0.13
substreams-entity-change = "1.3"

[build-dependencies]
prost-build = "0.11"
tonic-build = "0.8"
