[package]
name = "substreams-jupiter-dex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.5.0"
hex = "0.4.3"
prost = "0.11.9"
prost-types = "0.11.9"
substreams = "0.5.22"
substreams-solana = "0.13"
substreams-entity-change = "1.3"

[build-dependencies]
prost-build = "0.11.9"
